--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "Die Anmeldefunktion ist noch nicht implementiert.",
   "account_password_reset_not_implemented": "Die Funktion zum Zurücksetzen des Passworts ist noch nicht implementiert.",
   "account_forgot_password": "Passwort vergessen?",
-  "settings_parameters": "Parameter",
-  "system": "System",
   "settings_time": "Zeit",
-  "settings_timeviews": "Zeitansichten",
-  "settings_timeline": "Zeitleiste",
-  "settings_timeline_size": "Größe",
-  "settings_categories": "Kategorien",
-  "settings_categories_all": "Alle",
-  "settings_region": "Region",
-  "settings_region_system": "System",
-  "settings_region_custom": "Brauch",
-  "region_date": "Datum",
-  "region_numbers": "Zahlen",
-  "region_years": "Jahre",
-  "region_week_starts": "Die Woche beginnt",
-  "date_order": "Datumsreihenfolge",
-  "date_order_dmy": "Tag/Monat/Jahr (TTJJ)",
-  "date_order_mdy": "Monat/Tag/Jahr (MDY)",
-  "date_order_ymd": "Jahr/Monat/Tag (JJJJJ)",
-  "number_format": "Zahlenformat",
-  "year_suffixes": "Jahreszusätze",
-  "year_suffixes_bmk": "B/M/K (Englisch)",
-  "year_suffixes_gama": "Ga/Ma (wissenschaftlich)",
-  "year_suffixes_mrd": "Mrd/Mio/T (Deutsch)",
-  "week_starts": "Die Woche beginnt am",
-  "monday": "Montag",
-  "sunday": "Sonntag",
-  "mouse": "Maus",
-  "mouse_drag": "Ziehen",
-  "mouse_wheel": "Rad",
-  "pan_timeline": "Pan-Zeitleiste",
-  "zoom_at_cursor": "Zoomen Sie am Cursor",
-  "pan_sensitivity": "Pan-Empfindlichkeit",
-  "enable_inertia": "Impuls nach dem Bremsvorgang",
-  "touch": "Berühren",
-  "drag_touch": "Ziehen",
-  "pan": "Pfanne",
-  "pinch_touch": "Prise",
-  "zoom_in_out": "Vergrößern/Verkleinern",
-  "zoom_sensitivity": "Kneifempfindlichkeit",
-  "enable_pinch_zoom": "Zum Vergrößern zusammenziehen",
-  "keyboard": "Tastatur",
-  "pan_left_right": "Schwenken Sie nach links/rechts",
-  "fast_pan": "Schnellpfanne (5x)",
-  "jump_to_present": "Zur Gegenwart springen",
-  "reset_zoom": "Zoom zurücksetzen",
-  "invert_arrow_keys": "Pfeiltasten umkehren"
+  "time_timeviews": "Zeitansichten",
+  "time_timeline": "Zeitleiste",
+  "time_timeline_size": "Größe",
+  "time_categories": "Kategorien",
+  "time_categories_all": "Alle",
+  "time_region": "Region",
+  "time_region_system": "System",
+  "time_region_custom": "Brauch",
+  "time_region_date_order": "Datumsreihenfolge",
+  "time_region_date_order_dmy": "Tag-Monat-Jahr",
+  "time_region_date_order_mdy": "Monat-Tag-Jahr",
+  "time_region_date_order_ymd": "Jahr-Monat-Tag",
+  "time_region_number_format": "Zahlenformat",
+  "time_region_year_suffixes": "Jahreszusätze",
+  "time_region_year_suffixes_bmk": "B/M/K",
+  "time_region_year_suffixes_gama": "Ga/Ma",
+  "time_region_year_suffixes_mrd": "Mrd/Mio/T",
+  "time_region_week_starts": "Die Woche beginnt",
+  "time_region_week_starts_monday": "Montag",
+  "time_region_week_starts_sunday": "Sonntag",
+  "settings_parameters": "Parameter",
+  "controls_mouse": "Maus",
+  "controls_mouse_drag": "Ziehen",
+  "controls_mouse_drag_pan": "Pan-Zeitleiste",
+  "controls_mouse_wheel": "Rad",
+  "controls_mouse_wheel_zoom_at_cursor": "Zoomen Sie am Cursor",
+  "controls_mouse_pan_sensitivity": "Pan-Empfindlichkeit",
+  "controls_mouse_enable_inertia": "Impuls nach dem Bremsvorgang",
+  "controls_keyboard": "Tastatur",
+  "controls_keyboard_pan_left_right": "Schwenken Sie nach links/rechts",
+  "controls_keyboard_key_shift": "Schicht",
+  "controls_keyboard_fast_pan": "Schnellpfanne (5x)",
+  "controls_keyboard_zoom_in_out": "Vergrößern/Verkleinern",
+  "controls_keyboard_key_home": "Heim",
+  "controls_keyboard_jump_to_present": "Zur Gegenwart springen",
+  "controls_keyboard_reset_zoom": "Zoom zurücksetzen",
+  "controls_keyboard_invert_arrows": "Pfeiltasten umkehren",
+  "controls_touch": "Berühren",
+  "controls_touch_drag": "Ziehen",
+  "controls_touch_drag_pan": "Pfanne",
+  "controls_touch_pinch": "Prise",
+  "controls_touch_pinch_zoom": "Vergrößern/Verkleinern",
+  "controls_touch_zoom_sensitivity": "Kneifempfindlichkeit",
+  "controls_touch_enable_pinch_zoom": "Pinch-to-Zoom aktivieren"
 }
