--- a/Jsons/language/en.json
+++ b/Jsons/language/en.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "Login functionality not implemented yet",
   "account_password_reset_not_implemented": "Password reset functionality not implemented yet",
   "account_forgot_password": "Forgot password?",
-  "settings_parameters": "Parameters",
-  "system": "system",
   "settings_time": "Time",
-  "settings_timeviews": "Timeviews",
-  "settings_timeline": "Timeline",
-  "settings_timeline_size": "Size",
-  "settings_categories": "Categories",
-  "settings_categories_all": "All",
-  "settings_region": "Region",
-  "settings_region_system": "system",
-  "settings_region_custom": "custom",
-  "region_date": "Date",
-  "region_numbers": "Numbers",
-  "region_years": "Years",
-  "region_week_starts": "Week starts",
-  "date_order": "Date order",
-  "date_order_dmy": "Day/Month/Year (DMY)",
-  "date_order_mdy": "Month/Day/Year (MDY)",
-  "date_order_ymd": "Year/Month/Day (YMD)",
-  "number_format": "Number format",
-  "year_suffixes": "Year suffixes",
-  "year_suffixes_bmk": "B/M/K (English)",
-  "year_suffixes_gama": "Ga/Ma (Scientific)",
-  "year_suffixes_mrd": "Mrd/Mio/T (German)",
-  "week_starts": "Week starts on",
-  "monday": "Monday",
-  "sunday": "Sunday",
-  "mouse": "Mouse",
-  "mouse_drag": "Drag",
-  "mouse_wheel": "Wheel",
-  "pan_timeline": "Pan timeline",
-  "zoom_at_cursor": "Zoom at cursor",
-  "pan_sensitivity": "Pan sensitivity",
-  "enable_inertia": "Momentum after drag",
-  "touch": "Touch",
-  "drag_touch": "Drag",
-  "pan": "Pan",
-  "pinch_touch": "Pinch",
-  "zoom_in_out": "Zoom in/out",
-  "zoom_sensitivity": "Pinch sensitivity",
-  "enable_pinch_zoom": "pinch to zoom",
-  "keyboard": "Keyboard",
-  "pan_left_right": "Pan left/right",
-  "fast_pan": "Fast pan (5x)",
-  "jump_to_present": "Jump to present",
-  "reset_zoom": "Reset zoom",
-  "invert_arrow_keys": "Invert arrow keys"
+  "time_timeviews": "Timeviews",
+  "time_timeline": "Timeline",
+  "time_timeline_size": "Size",
+  "time_categories": "Categories",
+  "time_categories_all": "All",
+  "time_region": "Region",
+  "time_region_system": "system",
+  "time_region_custom": "custom",
+  "time_region_date_order": "Date order",
+  "time_region_date_order_dmy": "Day-Month-Year",
+  "time_region_date_order_mdy": "Month-Day-Year",
+  "time_region_date_order_ymd": "Year-Month-Day",
+  "time_region_number_format": "Number format",
+  "time_region_year_suffixes": "Year suffixes",
+  "time_region_year_suffixes_bmk": "B/M/K",
+  "time_region_year_suffixes_gama": "Ga/Ma",
+  "time_region_year_suffixes_mrd": "Mrd/Mio/T",
+  "time_region_week_starts": "Week starts",
+  "time_region_week_starts_monday": "Monday",
+  "time_region_week_starts_sunday": "Sunday",
+  "settings_parameters": "Parameters",
+  "controls_mouse": "Mouse",
+  "controls_mouse_drag": "Drag",
+  "controls_mouse_drag_pan": "Pan timeline",
+  "controls_mouse_wheel": "Wheel",
+  "controls_mouse_wheel_zoom_at_cursor": "Zoom at cursor",
+  "controls_mouse_pan_sensitivity": "Pan sensitivity",
+  "controls_mouse_enable_inertia": "Momentum after drag",
+  "controls_keyboard": "Keyboard",
+  "controls_keyboard_pan_left_right": "Pan left/right",
+  "controls_keyboard_key_shift": "Shift",
+  "controls_keyboard_fast_pan": "Fast pan (5x)",
+  "controls_keyboard_zoom_in_out": "Zoom in/out",
+  "controls_keyboard_key_home": "Home",
+  "controls_keyboard_jump_to_present": "Jump to present",
+  "controls_keyboard_reset_zoom": "Reset zoom",
+  "controls_keyboard_invert_arrows": "Invert arrow keys",
+  "controls_touch": "Touch",
+  "controls_touch_drag": "Drag",
+  "controls_touch_drag_pan": "Pan",
+  "controls_touch_pinch": "Pinch",
+  "controls_touch_pinch_zoom": "Zoom in/out",
+  "controls_touch_zoom_sensitivity": "Pinch sensitivity",
+  "controls_touch_enable_pinch_zoom": "Enable pinch to zoom"
 }
