--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "La fonctionnalité de connexion n'est pas encore implémentée.",
   "account_password_reset_not_implemented": "La fonctionnalité de réinitialisation du mot de passe n'est pas encore implémentée.",
   "account_forgot_password": "Mot de passe oublié ?",
-  "settings_parameters": "Paramètres",
-  "system": "système",
   "settings_time": "Temps",
-  "settings_timeviews": "Timeviews",
-  "settings_timeline": "Chronologie",
-  "settings_timeline_size": "Taille",
-  "settings_categories": "Catégories",
-  "settings_categories_all": "Tous",
-  "settings_region": "Région",
-  "settings_region_system": "système",
-  "settings_region_custom": "coutume",
-  "region_date": "Date",
-  "region_numbers": "Nombres",
-  "region_years": "Années",
-  "region_week_starts": "La semaine commence",
-  "date_order": "Ordre des dates",
-  "date_order_dmy": "Jour/Mois/Année (JJ/MM/AAAA)",
-  "date_order_mdy": "Mois/Jour/Année (MDY)",
-  "date_order_ymd": "Année/Mois/Jour (AAAA)",
-  "number_format": "Format numérique",
-  "year_suffixes": "Suffixes d'année",
-  "year_suffixes_bmk": "B/M/K (Anglais)",
-  "year_suffixes_gama": "Ga/Ma (Scientifique)",
-  "year_suffixes_mrd": "Mrd/Mio/T (allemand)",
-  "week_starts": "La semaine commence le",
-  "monday": "Lundi",
-  "sunday": "Dimanche",
-  "mouse": "Souris",
-  "mouse_drag": "Traîner",
-  "mouse_wheel": "Roue",
-  "pan_timeline": "Chronologie panoramique",
-  "zoom_at_cursor": "Zoomer au niveau du curseur",
-  "pan_sensitivity": "Sensibilité pan",
-  "enable_inertia": "L'élan après la traînée",
-  "touch": "Touche",
-  "drag_touch": "Traîner",
-  "pan": "Poêle",
-  "pinch_touch": "Pincer",
-  "zoom_in_out": "Zoom avant/arrière",
-  "zoom_sensitivity": "Sensibilité au pincement",
-  "enable_pinch_zoom": "Pincez pour zoomer",
-  "keyboard": "Clavier",
-  "pan_left_right": "Déplacer vers la gauche/droite",
-  "fast_pan": "Poêle rapide (5x)",
-  "jump_to_present": "Aller au présent",
-  "reset_zoom": "Réinitialiser le zoom",
-  "invert_arrow_keys": "Inverser les touches fléchées"
+  "time_timeviews": "Timeviews",
+  "time_timeline": "Chronologie",
+  "time_timeline_size": "Taille",
+  "time_categories": "Catégories",
+  "time_categories_all": "Tous",
+  "time_region": "Région",
+  "time_region_system": "système",
+  "time_region_custom": "coutume",
+  "time_region_date_order": "Ordre des dates",
+  "time_region_date_order_dmy": "Jour-Mois-Année",
+  "time_region_date_order_mdy": "Mois-Jour-Année",
+  "time_region_date_order_ymd": "Année-Mois-Jour",
+  "time_region_number_format": "Format numérique",
+  "time_region_year_suffixes": "Suffixes d'année",
+  "time_region_year_suffixes_bmk": "B/M/K",
+  "time_region_year_suffixes_gama": "Ga/Ma",
+  "time_region_year_suffixes_mrd": "Mrd/Mio/T",
+  "time_region_week_starts": "La semaine commence",
+  "time_region_week_starts_monday": "Lundi",
+  "time_region_week_starts_sunday": "Dimanche",
+  "settings_parameters": "Paramètres",
+  "controls_mouse": "Souris",
+  "controls_mouse_drag": "Traîner",
+  "controls_mouse_drag_pan": "Chronologie panoramique",
+  "controls_mouse_wheel": "Roue",
+  "controls_mouse_wheel_zoom_at_cursor": "Zoomer au niveau du curseur",
+  "controls_mouse_pan_sensitivity": "Sensibilité pan",
+  "controls_mouse_enable_inertia": "L'élan après la traînée",
+  "controls_keyboard": "Clavier",
+  "controls_keyboard_pan_left_right": "Déplacer vers la gauche/droite",
+  "controls_keyboard_key_shift": "Changement",
+  "controls_keyboard_fast_pan": "Poêle rapide (5x)",
+  "controls_keyboard_zoom_in_out": "Zoom avant/arrière",
+  "controls_keyboard_key_home": "Maison",
+  "controls_keyboard_jump_to_present": "Aller au présent",
+  "controls_keyboard_reset_zoom": "Réinitialiser le zoom",
+  "controls_keyboard_invert_arrows": "Inverser les touches fléchées",
+  "controls_touch": "Touche",
+  "controls_touch_drag": "Traîner",
+  "controls_touch_drag_pan": "Poêle",
+  "controls_touch_pinch": "Pincer",
+  "controls_touch_pinch_zoom": "Zoom avant/arrière",
+  "controls_touch_zoom_sensitivity": "Sensibilité au pincement",
+  "controls_touch_enable_pinch_zoom": "Activer le zoom par pincement"
 }
