--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "लॉगिन सुविधा अभी तक लागू नहीं की गई है",
   "account_password_reset_not_implemented": "पासवर्ड रीसेट करने की सुविधा अभी तक लागू नहीं की गई है।",
   "account_forgot_password": "पासवर्ड भूल गए?",
-  "settings_parameters": "पैरामीटर",
-  "system": "प्रणाली",
   "settings_time": "समय",
-  "settings_timeviews": "समय दृश्य",
-  "settings_timeline": "समय",
-  "settings_timeline_size": "आकार",
-  "settings_categories": "श्रेणियाँ",
-  "settings_categories_all": "सभी",
-  "settings_region": "क्षेत्र",
-  "settings_region_system": "प्रणाली",
-  "settings_region_custom": "रिवाज़",
-  "region_date": "तारीख",
-  "region_numbers": "नंबर",
-  "region_years": "साल",
-  "region_week_starts": "सप्ताह शुरू होता है",
-  "date_order": "दिनांक क्रम",
-  "date_order_dmy": "दिन/माह/वर्ष (डीएमवाई)",
-  "date_order_mdy": "माह/दिन/वर्ष (एमडीवाई)",
-  "date_order_ymd": "वर्ष/माह/दिन (YMD)",
-  "number_format": "संख्या स्वरूप",
-  "year_suffixes": "वर्ष प्रत्यय",
-  "year_suffixes_bmk": "बी/एम/के (अंग्रेजी)",
-  "year_suffixes_gama": "गा/मा (वैज्ञानिक)",
-  "year_suffixes_mrd": "Mrd/Mio/T (जर्मन)",
-  "week_starts": "सप्ताह की शुरुआत होती है",
-  "monday": "सोमवार",
-  "sunday": "रविवार",
-  "mouse": "चूहा",
-  "mouse_drag": "खींचना",
-  "mouse_wheel": "पहिया",
-  "pan_timeline": "पैन टाइमलाइन",
-  "zoom_at_cursor": "कर्सर पर ज़ूम करें",
-  "pan_sensitivity": "पैन संवेदनशीलता",
-  "enable_inertia": "घर्षण के बाद संवेग",
-  "touch": "छूना",
-  "drag_touch": "खींचना",
-  "pan": "कड़ाही",
-  "pinch_touch": "चुटकी",
-  "zoom_in_out": "ज़ूम इन/आउट",
-  "zoom_sensitivity": "चुटकी संवेदनशीलता",
-  "enable_pinch_zoom": "ज़ूम करने के लिए पिंच करें",
-  "keyboard": "कीबोर्ड",
-  "pan_left_right": "पैन बाएँ/दाएँ",
-  "fast_pan": "फास्ट पैन (5x)",
-  "jump_to_present": "वर्तमान पर जाएं",
-  "reset_zoom": "ज़ूम रीसेट करें",
-  "invert_arrow_keys": "तीर कुंजियों को उल्टा करें"
+  "time_timeviews": "समय दृश्य",
+  "time_timeline": "समय",
+  "time_timeline_size": "आकार",
+  "time_categories": "श्रेणियाँ",
+  "time_categories_all": "सभी",
+  "time_region": "क्षेत्र",
+  "time_region_system": "प्रणाली",
+  "time_region_custom": "रिवाज़",
+  "time_region_date_order": "दिनांक क्रम",
+  "time_region_date_order_dmy": "दिन-माह-वर्ष",
+  "time_region_date_order_mdy": "महीना दिन साल",
+  "time_region_date_order_ymd": "साल महीना दिन",
+  "time_region_number_format": "संख्या स्वरूप",
+  "time_region_year_suffixes": "वर्ष प्रत्यय",
+  "time_region_year_suffixes_bmk": "बी/एम/के",
+  "time_region_year_suffixes_gama": "गा/मा",
+  "time_region_year_suffixes_mrd": "Mrd/Mio/T",
+  "time_region_week_starts": "सप्ताह शुरू होता है",
+  "time_region_week_starts_monday": "सोमवार",
+  "time_region_week_starts_sunday": "रविवार",
+  "settings_parameters": "पैरामीटर",
+  "controls_mouse": "चूहा",
+  "controls_mouse_drag": "खींचना",
+  "controls_mouse_drag_pan": "पैन टाइमलाइन",
+  "controls_mouse_wheel": "पहिया",
+  "controls_mouse_wheel_zoom_at_cursor": "कर्सर पर ज़ूम करें",
+  "controls_mouse_pan_sensitivity": "पैन संवेदनशीलता",
+  "controls_mouse_enable_inertia": "घर्षण के बाद संवेग",
+  "controls_keyboard": "कीबोर्ड",
+  "controls_keyboard_pan_left_right": "पैन बाएँ/दाएँ",
+  "controls_keyboard_key_shift": "बदलाव",
+  "controls_keyboard_fast_pan": "फास्ट पैन (5x)",
+  "controls_keyboard_zoom_in_out": "ज़ूम इन/आउट",
+  "controls_keyboard_key_home": "घर",
+  "controls_keyboard_jump_to_present": "वर्तमान पर जाएं",
+  "controls_keyboard_reset_zoom": "ज़ूम रीसेट करें",
+  "controls_keyboard_invert_arrows": "तीर कुंजियों को उल्टा करें",
+  "controls_touch": "छूना",
+  "controls_touch_drag": "खींचना",
+  "controls_touch_drag_pan": "कड़ाही",
+  "controls_touch_pinch": "चुटकी",
+  "controls_touch_pinch_zoom": "ज़ूम इन/आउट",
+  "controls_touch_zoom_sensitivity": "चुटकी संवेदनशीलता",
+  "controls_touch_enable_pinch_zoom": "पिंच टू ज़ूम को सक्षम करें"
 }
