--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "Funzionalità di accesso non ancora implementata",
   "account_password_reset_not_implemented": "La funzionalità di reimpostazione della password non è ancora implementata",
   "account_forgot_password": "Ha dimenticato la password?",
-  "settings_parameters": "Parametri",
-  "system": "sistema",
   "settings_time": "Tempo",
-  "settings_timeviews": "Visualizzazioni temporali",
-  "settings_timeline": "Cronologia",
-  "settings_timeline_size": "Misurare",
-  "settings_categories": "Categorie",
-  "settings_categories_all": "Tutto",
-  "settings_region": "Regione",
-  "settings_region_system": "sistema",
-  "settings_region_custom": "costume",
-  "region_date": "Data",
-  "region_numbers": "Numeri",
-  "region_years": "Anni",
-  "region_week_starts": "La settimana inizia",
-  "date_order": "Ordine di data",
-  "date_order_dmy": "Giorno/Mese/Anno (DMY)",
-  "date_order_mdy": "Mese/Giorno/Anno (MDY)",
-  "date_order_ymd": "Anno/Mese/Giorno (YMD)",
-  "number_format": "Formato numerico",
-  "year_suffixes": "Suffissi dell'anno",
-  "year_suffixes_bmk": "B/M/K (inglese)",
-  "year_suffixes_gama": "Ga/Ma (scientifico)",
-  "year_suffixes_mrd": "Mrd/Mio/T (tedesco)",
-  "week_starts": "La settimana inizia il",
-  "monday": "Lunedi",
-  "sunday": "Domenica",
-  "mouse": "Topo",
-  "mouse_drag": "Lagna",
-  "mouse_wheel": "Ruota",
-  "pan_timeline": "Panoramica della cronologia",
-  "zoom_at_cursor": "Zoom sul cursore",
-  "pan_sensitivity": "Sensibilità panoramica",
-  "enable_inertia": "Momento dopo il trascinamento",
-  "touch": "Tocco",
-  "drag_touch": "Lagna",
-  "pan": "Padella",
-  "pinch_touch": "Pizzico",
-  "zoom_in_out": "Ingrandisci/riduci",
-  "zoom_sensitivity": "Sensibilità al pizzicore",
-  "enable_pinch_zoom": "pizzica per ingrandire",
-  "keyboard": "Tastiera",
-  "pan_left_right": "Panoramica a sinistra/destra",
-  "fast_pan": "Panoramica veloce (5x)",
-  "jump_to_present": "Vai al presente",
-  "reset_zoom": "Reimposta zoom",
-  "invert_arrow_keys": "Inverti i tasti freccia"
+  "time_timeviews": "Visualizzazioni temporali",
+  "time_timeline": "Cronologia",
+  "time_timeline_size": "Misurare",
+  "time_categories": "Categorie",
+  "time_categories_all": "Tutto",
+  "time_region": "Regione",
+  "time_region_system": "sistema",
+  "time_region_custom": "costume",
+  "time_region_date_order": "Ordine di data",
+  "time_region_date_order_dmy": "Giorno-Mese-Anno",
+  "time_region_date_order_mdy": "Mese-Giorno-Anno",
+  "time_region_date_order_ymd": "Anno-Mese-Giorno",
+  "time_region_number_format": "Formato numerico",
+  "time_region_year_suffixes": "Suffissi dell'anno",
+  "time_region_year_suffixes_bmk": "B/M/K",
+  "time_region_year_suffixes_gama": "Ga/Ma",
+  "time_region_year_suffixes_mrd": "Mrd/Mio/T",
+  "time_region_week_starts": "La settimana inizia",
+  "time_region_week_starts_monday": "Lunedi",
+  "time_region_week_starts_sunday": "Domenica",
+  "settings_parameters": "Parametri",
+  "controls_mouse": "Topo",
+  "controls_mouse_drag": "Lagna",
+  "controls_mouse_drag_pan": "Panoramica della cronologia",
+  "controls_mouse_wheel": "Ruota",
+  "controls_mouse_wheel_zoom_at_cursor": "Zoom sul cursore",
+  "controls_mouse_pan_sensitivity": "Sensibilità panoramica",
+  "controls_mouse_enable_inertia": "Momento dopo il trascinamento",
+  "controls_keyboard": "Tastiera",
+  "controls_keyboard_pan_left_right": "Panoramica a sinistra/destra",
+  "controls_keyboard_key_shift": "Spostare",
+  "controls_keyboard_fast_pan": "Panoramica veloce (5x)",
+  "controls_keyboard_zoom_in_out": "Ingrandisci/riduci",
+  "controls_keyboard_key_home": "Casa",
+  "controls_keyboard_jump_to_present": "Vai al presente",
+  "controls_keyboard_reset_zoom": "Reimposta zoom",
+  "controls_keyboard_invert_arrows": "Inverti i tasti freccia",
+  "controls_touch": "Tocco",
+  "controls_touch_drag": "Lagna",
+  "controls_touch_drag_pan": "Padella",
+  "controls_touch_pinch": "Pizzico",
+  "controls_touch_pinch_zoom": "Ingrandisci/riduci",
+  "controls_touch_zoom_sensitivity": "Sensibilità al pizzicore",
+  "controls_touch_enable_pinch_zoom": "Abilita il pizzico per ingrandire"
 }
