--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "ログイン機能はまだ実装されていません",
   "account_password_reset_not_implemented": "パスワードリセット機能はまだ実装されていません",
   "account_forgot_password": "パスワードをお忘れですか？",
-  "settings_parameters": "パラメータ",
-  "system": "システム",
   "settings_time": "時間",
-  "settings_timeviews": "タイムビュー",
-  "settings_timeline": "タイムライン",
-  "settings_timeline_size": "サイズ",
-  "settings_categories": "カテゴリー",
-  "settings_categories_all": "全て",
-  "settings_region": "地域",
-  "settings_region_system": "システム",
-  "settings_region_custom": "カスタム",
-  "region_date": "日付",
-  "region_numbers": "数字",
-  "region_years": "年",
-  "region_week_starts": "週の始まり",
-  "date_order": "日付順",
-  "date_order_dmy": "日/月/年（DMY）",
-  "date_order_mdy": "月/日/年（MDY）",
-  "date_order_ymd": "年/月/日（YMD）",
-  "number_format": "数値形式",
-  "year_suffixes": "年接尾辞",
-  "year_suffixes_bmk": "B/M/K（英語）",
-  "year_suffixes_gama": "Ga/Ma（科学的）",
-  "year_suffixes_mrd": "Mrd/Mio/T（ドイツ語）",
-  "week_starts": "週の始まり",
-  "monday": "月曜日",
-  "sunday": "日曜日",
-  "mouse": "ねずみ",
-  "mouse_drag": "ドラッグ",
-  "mouse_wheel": "車輪",
-  "pan_timeline": "タイムラインをパン",
-  "zoom_at_cursor": "カーソル位置でズーム",
-  "pan_sensitivity": "パン感度",
-  "enable_inertia": "抗力後の運動量",
-  "touch": "触る",
-  "drag_touch": "ドラッグ",
-  "pan": "パン",
-  "pinch_touch": "ピンチ",
-  "zoom_in_out": "ズームイン/ズームアウト",
-  "zoom_sensitivity": "ピンチ感度",
-  "enable_pinch_zoom": "ピンチしてズーム",
-  "keyboard": "キーボード",
-  "pan_left_right": "左/右にパン",
-  "fast_pan": "高速パン（5倍）",
-  "jump_to_present": "現在地へジャンプ",
-  "reset_zoom": "ズームをリセット",
-  "invert_arrow_keys": "矢印キーを反転"
+  "time_timeviews": "タイムビュー",
+  "time_timeline": "タイムライン",
+  "time_timeline_size": "サイズ",
+  "time_categories": "カテゴリー",
+  "time_categories_all": "全て",
+  "time_region": "地域",
+  "time_region_system": "システム",
+  "time_region_custom": "カスタム",
+  "time_region_date_order": "日付順",
+  "time_region_date_order_dmy": "日-月-年",
+  "time_region_date_order_mdy": "月-日-年",
+  "time_region_date_order_ymd": "年-月-日",
+  "time_region_number_format": "数値形式",
+  "time_region_year_suffixes": "年接尾辞",
+  "time_region_year_suffixes_bmk": "白/中/ケ",
+  "time_region_year_suffixes_gama": "ガ/マ",
+  "time_region_year_suffixes_mrd": "Mrd/Mio/T",
+  "time_region_week_starts": "週の始まり",
+  "time_region_week_starts_monday": "月曜日",
+  "time_region_week_starts_sunday": "日曜日",
+  "settings_parameters": "パラメータ",
+  "controls_mouse": "ねずみ",
+  "controls_mouse_drag": "ドラッグ",
+  "controls_mouse_drag_pan": "タイムラインをパン",
+  "controls_mouse_wheel": "車輪",
+  "controls_mouse_wheel_zoom_at_cursor": "カーソル位置でズーム",
+  "controls_mouse_pan_sensitivity": "パン感度",
+  "controls_mouse_enable_inertia": "抗力後の運動量",
+  "controls_keyboard": "キーボード",
+  "controls_keyboard_pan_left_right": "左/右にパン",
+  "controls_keyboard_key_shift": "シフト",
+  "controls_keyboard_fast_pan": "高速パン（5倍）",
+  "controls_keyboard_zoom_in_out": "ズームイン/ズームアウト",
+  "controls_keyboard_key_home": "家",
+  "controls_keyboard_jump_to_present": "現在地へジャンプ",
+  "controls_keyboard_reset_zoom": "ズームをリセット",
+  "controls_keyboard_invert_arrows": "矢印キーを反転",
+  "controls_touch": "触る",
+  "controls_touch_drag": "ドラッグ",
+  "controls_touch_drag_pan": "パン",
+  "controls_touch_pinch": "ピンチ",
+  "controls_touch_pinch_zoom": "ズームイン/ズームアウト",
+  "controls_touch_zoom_sensitivity": "ピンチ感度",
+  "controls_touch_enable_pinch_zoom": "ピンチズームを有効にする"
 }
