--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "Funkcjonalność logowania nie została jeszcze zaimplementowana",
   "account_password_reset_not_implemented": "Funkcja resetowania hasła nie została jeszcze zaimplementowana",
   "account_forgot_password": "Zapomniałeś hasła?",
-  "settings_parameters": "Parametry",
-  "system": "system",
   "settings_time": "Czas",
-  "settings_timeviews": "Widoki czasowe",
-  "settings_timeline": "Oś czasu",
-  "settings_timeline_size": "Rozmiar",
-  "settings_categories": "Kategorie",
-  "settings_categories_all": "Wszystko",
-  "settings_region": "Region",
-  "settings_region_system": "system",
-  "settings_region_custom": "zwyczaj",
-  "region_date": "Data",
-  "region_numbers": "Takty muzyczne",
-  "region_years": "Lata",
-  "region_week_starts": "Tydzień się zaczyna",
-  "date_order": "Kolejność dat",
-  "date_order_dmy": "Dzień/Miesiąc/Rok (DMY)",
-  "date_order_mdy": "Miesiąc/Dzień/Rok (MDY)",
-  "date_order_ymd": "Rok/Miesiąc/Dzień (YMD)",
-  "number_format": "Format liczbowy",
-  "year_suffixes": "Sufiksy roku",
-  "year_suffixes_bmk": "B/M/K (angielski)",
-  "year_suffixes_gama": "Ga/Ma (naukowa)",
-  "year_suffixes_mrd": "Mrd/Mio/T (niemiecki)",
-  "week_starts": "Tydzień zaczyna się",
-  "monday": "Poniedziałek",
-  "sunday": "Niedziela",
-  "mouse": "Mysz",
-  "mouse_drag": "Ciągnąć",
-  "mouse_wheel": "Koło",
-  "pan_timeline": "Przesuń oś czasu",
-  "zoom_at_cursor": "Powiększ kursor",
-  "pan_sensitivity": "Czułość panoramowania",
-  "enable_inertia": "Pęd po przeciągnięciu",
-  "touch": "Dotykać",
-  "drag_touch": "Ciągnąć",
-  "pan": "Patelnia",
-  "pinch_touch": "Szczypta",
-  "zoom_in_out": "Powiększ/pomniejsz",
-  "zoom_sensitivity": "Wrażliwość na szczypanie",
-  "enable_pinch_zoom": "szczypnij, aby powiększyć",
-  "keyboard": "Klawiatura",
-  "pan_left_right": "Przesuń w lewo/prawo",
-  "fast_pan": "Szybki obrót (5x)",
-  "jump_to_present": "Przejdź do prezentacji",
-  "reset_zoom": "Zresetuj powiększenie",
-  "invert_arrow_keys": "Odwróć klawisze strzałek"
+  "time_timeviews": "Widoki czasowe",
+  "time_timeline": "Oś czasu",
+  "time_timeline_size": "Rozmiar",
+  "time_categories": "Kategorie",
+  "time_categories_all": "Wszystko",
+  "time_region": "Region",
+  "time_region_system": "system",
+  "time_region_custom": "zwyczaj",
+  "time_region_date_order": "Kolejność dat",
+  "time_region_date_order_dmy": "Dzień-Miesiąc-Rok",
+  "time_region_date_order_mdy": "Miesiąc-Dzień-Rok",
+  "time_region_date_order_ymd": "Rok-Miesiąc-Dzień",
+  "time_region_number_format": "Format liczbowy",
+  "time_region_year_suffixes": "Sufiksy roku",
+  "time_region_year_suffixes_bmk": "B/M/K",
+  "time_region_year_suffixes_gama": "Ga/Ma",
+  "time_region_year_suffixes_mrd": "Pan/Mio/T",
+  "time_region_week_starts": "Tydzień się zaczyna",
+  "time_region_week_starts_monday": "Poniedziałek",
+  "time_region_week_starts_sunday": "Niedziela",
+  "settings_parameters": "Parametry",
+  "controls_mouse": "Mysz",
+  "controls_mouse_drag": "Ciągnąć",
+  "controls_mouse_drag_pan": "Przesuń oś czasu",
+  "controls_mouse_wheel": "Koło",
+  "controls_mouse_wheel_zoom_at_cursor": "Powiększ kursor",
+  "controls_mouse_pan_sensitivity": "Czułość panoramowania",
+  "controls_mouse_enable_inertia": "Pęd po przeciągnięciu",
+  "controls_keyboard": "Klawiatura",
+  "controls_keyboard_pan_left_right": "Przesuń w lewo/prawo",
+  "controls_keyboard_key_shift": "Zmiana",
+  "controls_keyboard_fast_pan": "Szybki obrót (5x)",
+  "controls_keyboard_zoom_in_out": "Powiększ/pomniejsz",
+  "controls_keyboard_key_home": "Dom",
+  "controls_keyboard_jump_to_present": "Przejdź do prezentacji",
+  "controls_keyboard_reset_zoom": "Zresetuj powiększenie",
+  "controls_keyboard_invert_arrows": "Odwróć klawisze strzałek",
+  "controls_touch": "Dotykać",
+  "controls_touch_drag": "Ciągnąć",
+  "controls_touch_drag_pan": "Patelnia",
+  "controls_touch_pinch": "Szczypta",
+  "controls_touch_pinch_zoom": "Powiększ/pomniejsz",
+  "controls_touch_zoom_sensitivity": "Wrażliwość na szczypanie",
+  "controls_touch_enable_pinch_zoom": "Włącz funkcję szczypania, aby powiększyć"
 }
