--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "Функция авторизации пока не реализована.",
   "account_password_reset_not_implemented": "Функция сброса пароля пока не реализована.",
   "account_forgot_password": "Забыли пароль?",
-  "settings_parameters": "Параметры",
-  "system": "система",
   "settings_time": "Время",
-  "settings_timeviews": "Просмотры по времени",
-  "settings_timeline": "Хронология",
-  "settings_timeline_size": "Размер",
-  "settings_categories": "Категории",
-  "settings_categories_all": "Все",
-  "settings_region": "Область",
-  "settings_region_system": "система",
-  "settings_region_custom": "обычай",
-  "region_date": "Дата",
-  "region_numbers": "Числа",
-  "region_years": "Годы",
-  "region_week_starts": "Неделя начинается",
-  "date_order": "Дата заказа",
-  "date_order_dmy": "День/Месяц/Год (ДМГ)",
-  "date_order_mdy": "Месяц/День/Год (МДД)",
-  "date_order_ymd": "Год/Месяц/День (ГМД)",
-  "number_format": "Формат чисел",
-  "year_suffixes": "суффиксы года",
-  "year_suffixes_bmk": "Б/М/К (английский)",
-  "year_suffixes_gama": "Ga/Ma (Научный)",
-  "year_suffixes_mrd": "Mrd/Mio/T (немецкий)",
-  "week_starts": "Неделя начинается",
-  "monday": "Понедельник",
-  "sunday": "Воскресенье",
-  "mouse": "Мышь",
-  "mouse_drag": "Тащить",
-  "mouse_wheel": "Колесо",
-  "pan_timeline": "Хронология Пана",
-  "zoom_at_cursor": "Увеличьте масштаб при наведении курсора",
-  "pan_sensitivity": "чувствительность панели",
-  "enable_inertia": "Импульс после торможения",
-  "touch": "Трогать",
-  "drag_touch": "Тащить",
-  "pan": "Кастрюля",
-  "pinch_touch": "Ущипнуть",
-  "zoom_in_out": "Увеличение/уменьшение масштаба",
-  "zoom_sensitivity": "Чувствительность к сжатию",
-  "enable_pinch_zoom": "масштабирование с помощью жеста \"щипок\"",
-  "keyboard": "Клавиатура",
-  "pan_left_right": "Панорамирование влево/вправо",
-  "fast_pan": "Быстрая сковорода (5x)",
-  "jump_to_present": "Перейти к настоящему",
-  "reset_zoom": "Сбросить масштаб",
-  "invert_arrow_keys": "Инвертировать клавиши со стрелками"
+  "time_timeviews": "Просмотры по времени",
+  "time_timeline": "Хронология",
+  "time_timeline_size": "Размер",
+  "time_categories": "Категории",
+  "time_categories_all": "Все",
+  "time_region": "Область",
+  "time_region_system": "система",
+  "time_region_custom": "обычай",
+  "time_region_date_order": "Дата заказа",
+  "time_region_date_order_dmy": "День-Месяц-Год",
+  "time_region_date_order_mdy": "Месяц-День-Год",
+  "time_region_date_order_ymd": "Год-Месяц-День",
+  "time_region_number_format": "Формат чисел",
+  "time_region_year_suffixes": "суффиксы года",
+  "time_region_year_suffixes_bmk": "Б/М/К",
+  "time_region_year_suffixes_gama": "Га/Ма",
+  "time_region_year_suffixes_mrd": "Mrd/Mio/T",
+  "time_region_week_starts": "Неделя начинается",
+  "time_region_week_starts_monday": "Понедельник",
+  "time_region_week_starts_sunday": "Воскресенье",
+  "settings_parameters": "Параметры",
+  "controls_mouse": "Мышь",
+  "controls_mouse_drag": "Тащить",
+  "controls_mouse_drag_pan": "Хронология Пана",
+  "controls_mouse_wheel": "Колесо",
+  "controls_mouse_wheel_zoom_at_cursor": "Увеличьте масштаб при наведении курсора",
+  "controls_mouse_pan_sensitivity": "чувствительность панели",
+  "controls_mouse_enable_inertia": "Импульс после торможения",
+  "controls_keyboard": "Клавиатура",
+  "controls_keyboard_pan_left_right": "Панорамирование влево/вправо",
+  "controls_keyboard_key_shift": "Сдвиг",
+  "controls_keyboard_fast_pan": "Быстрая сковорода (5x)",
+  "controls_keyboard_zoom_in_out": "Увеличение/уменьшение масштаба",
+  "controls_keyboard_key_home": "Дом",
+  "controls_keyboard_jump_to_present": "Перейти к настоящему",
+  "controls_keyboard_reset_zoom": "Сбросить масштаб",
+  "controls_keyboard_invert_arrows": "Инвертировать клавиши со стрелками",
+  "controls_touch": "Трогать",
+  "controls_touch_drag": "Тащить",
+  "controls_touch_drag_pan": "Кастрюля",
+  "controls_touch_pinch": "Ущипнуть",
+  "controls_touch_pinch_zoom": "Увеличение/уменьшение масштаба",
+  "controls_touch_zoom_sensitivity": "Чувствительность к сжатию",
+  "controls_touch_enable_pinch_zoom": "Включить масштабирование с помощью жеста «щипок»"
 }
