--- a/Jsons/language/sv.json
+++ b/Jsons/language/sv.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "Inloggningsfunktionen är ännu inte implementerad",
   "account_password_reset_not_implemented": "Funktionen för återställning av lösenord är ännu inte implementerad",
   "account_forgot_password": "Glömt lösenordet?",
-  "settings_parameters": "Parametrar",
-  "system": "system",
   "settings_time": "Tid",
-  "settings_timeviews": "Tidsvyer",
-  "settings_timeline": "Tidslinje",
-  "settings_timeline_size": "Storlek",
-  "settings_categories": "Kategorier",
-  "settings_categories_all": "Alla",
-  "settings_region": "Område",
-  "settings_region_system": "system",
-  "settings_region_custom": "beställnings-",
-  "region_date": "Datum",
-  "region_numbers": "Tal",
-  "region_years": "År",
-  "region_week_starts": "Veckan börjar",
-  "date_order": "Datumordning",
-  "date_order_dmy": "Dag/Månad/År (DMY)",
-  "date_order_mdy": "Månad/Dag/År (MDY)",
-  "date_order_ymd": "År/Månad/Dag (YMD)",
-  "number_format": "Nummerformat",
-  "year_suffixes": "Årssuffix",
-  "year_suffixes_bmk": "B/M/K (engelska)",
-  "year_suffixes_gama": "Georgia/Massachusetts (vetenskaplig)",
-  "year_suffixes_mrd": "Mrd/Mio/T (tyska)",
-  "week_starts": "Veckan börjar på",
-  "monday": "måndag",
-  "sunday": "söndag",
-  "mouse": "Mus",
-  "mouse_drag": "Dra",
-  "mouse_wheel": "Hjul",
-  "pan_timeline": "Pan-tidslinje",
-  "zoom_at_cursor": "Zooma vid markören",
-  "pan_sensitivity": "Pan-känslighet",
-  "enable_inertia": "Momentum efter motstånd",
-  "touch": "Röra",
-  "drag_touch": "Dra",
-  "pan": "Panorera",
-  "pinch_touch": "Nypa",
-  "zoom_in_out": "Zooma in/ut",
-  "zoom_sensitivity": "Nypkänslighet",
-  "enable_pinch_zoom": "nyp för att zooma",
-  "keyboard": "Tangentbord",
-  "pan_left_right": "Panorera vänster/höger",
-  "fast_pan": "Snabb panorering (5x)",
-  "jump_to_present": "Hoppa till present",
-  "reset_zoom": "Återställ zoom",
-  "invert_arrow_keys": "Invertera piltangenter"
+  "time_timeviews": "Tidsvyer",
+  "time_timeline": "Tidslinje",
+  "time_timeline_size": "Storlek",
+  "time_categories": "Kategorier",
+  "time_categories_all": "Alla",
+  "time_region": "Område",
+  "time_region_system": "system",
+  "time_region_custom": "beställnings-",
+  "time_region_date_order": "Datumordning",
+  "time_region_date_order_dmy": "Dag-Månad-År",
+  "time_region_date_order_mdy": "Månad-Dag-År",
+  "time_region_date_order_ymd": "År-Månad-Dag",
+  "time_region_number_format": "Nummerformat",
+  "time_region_year_suffixes": "Årssuffix",
+  "time_region_year_suffixes_bmk": "B/M/K",
+  "time_region_year_suffixes_gama": "Georgia/Massachusetts",
+  "time_region_year_suffixes_mrd": "Herr/Mio/T",
+  "time_region_week_starts": "Veckan börjar",
+  "time_region_week_starts_monday": "måndag",
+  "time_region_week_starts_sunday": "söndag",
+  "settings_parameters": "Parametrar",
+  "controls_mouse": "Mus",
+  "controls_mouse_drag": "Dra",
+  "controls_mouse_drag_pan": "Pan-tidslinje",
+  "controls_mouse_wheel": "Hjul",
+  "controls_mouse_wheel_zoom_at_cursor": "Zooma vid markören",
+  "controls_mouse_pan_sensitivity": "Pan-känslighet",
+  "controls_mouse_enable_inertia": "Momentum efter motstånd",
+  "controls_keyboard": "Tangentbord",
+  "controls_keyboard_pan_left_right": "Panorera vänster/höger",
+  "controls_keyboard_key_shift": "Flytta",
+  "controls_keyboard_fast_pan": "Snabb panorering (5x)",
+  "controls_keyboard_zoom_in_out": "Zooma in/ut",
+  "controls_keyboard_key_home": "Hem",
+  "controls_keyboard_jump_to_present": "Hoppa till present",
+  "controls_keyboard_reset_zoom": "Återställ zoom",
+  "controls_keyboard_invert_arrows": "Invertera piltangenter",
+  "controls_touch": "Röra",
+  "controls_touch_drag": "Dra",
+  "controls_touch_drag_pan": "Panorera",
+  "controls_touch_pinch": "Nypa",
+  "controls_touch_pinch_zoom": "Zooma in/ut",
+  "controls_touch_zoom_sensitivity": "Nypkänslighet",
+  "controls_touch_enable_pinch_zoom": "Aktivera nyp för att zooma"
 }
