--- a/Jsons/language/zh.json
+++ b/Jsons/language/zh.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "登录功能尚未实现",
   "account_password_reset_not_implemented": "密码重置功能尚未实现",
   "account_forgot_password": "忘记密码？",
-  "settings_parameters": "参数",
-  "system": "系统",
   "settings_time": "时间",
-  "settings_timeviews": "时间视图",
-  "settings_timeline": "时间线",
-  "settings_timeline_size": "尺寸",
-  "settings_categories": "类别",
-  "settings_categories_all": "全部",
-  "settings_region": "地区",
-  "settings_region_system": "系统",
-  "settings_region_custom": "风俗",
-  "region_date": "日期",
-  "region_numbers": "数字",
-  "region_years": "年",
-  "region_week_starts": "一周开始",
-  "date_order": "日期顺序",
-  "date_order_dmy": "日/月/年 (DMY)",
-  "date_order_mdy": "月/日/年 (MDY)",
-  "date_order_ymd": "年/月/日 (YMD)",
-  "number_format": "数字格式",
-  "year_suffixes": "年份后缀",
-  "year_suffixes_bmk": "B/M/K（英语）",
-  "year_suffixes_gama": "Ga/Ma（科学）",
-  "year_suffixes_mrd": "Mrd/Mio/T（德语）",
-  "week_starts": "一周从……开始",
-  "monday": "周一",
-  "sunday": "星期日",
-  "mouse": "老鼠",
-  "mouse_drag": "拖",
-  "mouse_wheel": "车轮",
-  "pan_timeline": "泛时间线",
-  "zoom_at_cursor": "光标处放大",
-  "pan_sensitivity": "泛敏感性",
-  "enable_inertia": "阻力后的动量",
-  "touch": "触碰",
-  "drag_touch": "拖",
-  "pan": "平底锅",
-  "pinch_touch": "捏",
-  "zoom_in_out": "放大/缩小",
-  "zoom_sensitivity": "捏合灵敏度",
-  "enable_pinch_zoom": "双指捏合缩放",
-  "keyboard": "键盘",
-  "pan_left_right": "向左/向右平移",
-  "fast_pan": "快速平移（5倍）",
-  "jump_to_present": "跳转至当前时间",
-  "reset_zoom": "重置缩放",
-  "invert_arrow_keys": "反转方向键"
+  "time_timeviews": "时间视图",
+  "time_timeline": "时间线",
+  "time_timeline_size": "尺寸",
+  "time_categories": "类别",
+  "time_categories_all": "全部",
+  "time_region": "地区",
+  "time_region_system": "系统",
+  "time_region_custom": "风俗",
+  "time_region_date_order": "日期顺序",
+  "time_region_date_order_dmy": "日-月-年",
+  "time_region_date_order_mdy": "月-日-年",
+  "time_region_date_order_ymd": "年-月-日",
+  "time_region_number_format": "数字格式",
+  "time_region_year_suffixes": "年份后缀",
+  "time_region_year_suffixes_bmk": "B/M/K",
+  "time_region_year_suffixes_gama": "Ga/Ma",
+  "time_region_year_suffixes_mrd": "Mrd/Mio/T",
+  "time_region_week_starts": "一周开始",
+  "time_region_week_starts_monday": "周一",
+  "time_region_week_starts_sunday": "星期日",
+  "settings_parameters": "参数",
+  "controls_mouse": "老鼠",
+  "controls_mouse_drag": "拖",
+  "controls_mouse_drag_pan": "泛时间线",
+  "controls_mouse_wheel": "车轮",
+  "controls_mouse_wheel_zoom_at_cursor": "光标处放大",
+  "controls_mouse_pan_sensitivity": "泛敏感性",
+  "controls_mouse_enable_inertia": "阻力后的动量",
+  "controls_keyboard": "键盘",
+  "controls_keyboard_pan_left_right": "向左/向右平移",
+  "controls_keyboard_key_shift": "转移",
+  "controls_keyboard_fast_pan": "快速平移（5倍）",
+  "controls_keyboard_zoom_in_out": "放大/缩小",
+  "controls_keyboard_key_home": "家",
+  "controls_keyboard_jump_to_present": "跳转至当前时间",
+  "controls_keyboard_reset_zoom": "重置缩放",
+  "controls_keyboard_invert_arrows": "反转方向键",
+  "controls_touch": "触碰",
+  "controls_touch_drag": "拖",
+  "controls_touch_drag_pan": "平底锅",
+  "controls_touch_pinch": "捏",
+  "controls_touch_pinch_zoom": "放大/缩小",
+  "controls_touch_zoom_sensitivity": "捏合灵敏度",
+  "controls_touch_enable_pinch_zoom": "启用捏合缩放功能"
 }
