--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "La funcionalidad de inicio de sesión aún no se ha implementado",
   "account_password_reset_not_implemented": "La funcionalidad de restablecimiento de contraseña aún no está implementada",
   "account_forgot_password": "¿Has olvidado tu contraseña?",
-  "settings_parameters": "Parámetros",
-  "system": "sistema",
   "settings_time": "Tiempo",
-  "settings_timeviews": "Vistas de tiempo",
-  "settings_timeline": "Cronología",
-  "settings_timeline_size": "Tamaño",
-  "settings_categories": "Categorías",
-  "settings_categories_all": "Todo",
-  "settings_region": "Región",
-  "settings_region_system": "sistema",
-  "settings_region_custom": "costumbre",
-  "region_date": "Fecha",
-  "region_numbers": "Números",
-  "region_years": "Años",
-  "region_week_starts": "La semana comienza",
-  "date_order": "Orden de fecha",
-  "date_order_dmy": "Día/Mes/Año (DMY)",
-  "date_order_mdy": "Mes/Día/Año (MDY)",
-  "date_order_ymd": "Año/Mes/Día (YMD)",
-  "number_format": "Formato de número",
-  "year_suffixes": "Sufijos de año",
-  "year_suffixes_bmk": "B/M/K (Inglés)",
-  "year_suffixes_gama": "Ga/Ma (Científico)",
-  "year_suffixes_mrd": "Mrd/Mio/T (alemán)",
-  "week_starts": "La semana empieza el",
-  "monday": "Lunes",
-  "sunday": "Domingo",
-  "mouse": "Ratón",
-  "mouse_drag": "Arrastrar",
-  "mouse_wheel": "Rueda",
-  "pan_timeline": "Línea de tiempo de Pan",
-  "zoom_at_cursor": "Zoom en el cursor",
-  "pan_sensitivity": "Sensibilidad panorámica",
-  "enable_inertia": "Impulso después del arrastre",
-  "touch": "Tocar",
-  "drag_touch": "Arrastrar",
-  "pan": "Cacerola",
-  "pinch_touch": "Pellizco",
-  "zoom_in_out": "Acercar/alejar",
-  "zoom_sensitivity": "Sensibilidad al pellizco",
-  "enable_pinch_zoom": "pellizcar para hacer zoom",
-  "keyboard": "Teclado",
-  "pan_left_right": "Panorámica hacia la izquierda/derecha",
-  "fast_pan": "Panorámica rápida (5x)",
-  "jump_to_present": "Saltar al presente",
-  "reset_zoom": "Restablecer zoom",
-  "invert_arrow_keys": "Invertir teclas de flecha"
+  "time_timeviews": "Vistas de tiempo",
+  "time_timeline": "Cronología",
+  "time_timeline_size": "Tamaño",
+  "time_categories": "Categorías",
+  "time_categories_all": "Todo",
+  "time_region": "Región",
+  "time_region_system": "sistema",
+  "time_region_custom": "costumbre",
+  "time_region_date_order": "Orden de fecha",
+  "time_region_date_order_dmy": "Día-Mes-Año",
+  "time_region_date_order_mdy": "Mes-Día-Año",
+  "time_region_date_order_ymd": "Año-Mes-Día",
+  "time_region_number_format": "Formato de número",
+  "time_region_year_suffixes": "Sufijos de año",
+  "time_region_year_suffixes_bmk": "Negro/Marrón/K",
+  "time_region_year_suffixes_gama": "Ga/Ma",
+  "time_region_year_suffixes_mrd": "Sr./Mio/T",
+  "time_region_week_starts": "La semana comienza",
+  "time_region_week_starts_monday": "Lunes",
+  "time_region_week_starts_sunday": "Domingo",
+  "settings_parameters": "Parámetros",
+  "controls_mouse": "Ratón",
+  "controls_mouse_drag": "Arrastrar",
+  "controls_mouse_drag_pan": "Línea de tiempo de Pan",
+  "controls_mouse_wheel": "Rueda",
+  "controls_mouse_wheel_zoom_at_cursor": "Zoom en el cursor",
+  "controls_mouse_pan_sensitivity": "Sensibilidad panorámica",
+  "controls_mouse_enable_inertia": "Impulso después del arrastre",
+  "controls_keyboard": "Teclado",
+  "controls_keyboard_pan_left_right": "Panorámica hacia la izquierda/derecha",
+  "controls_keyboard_key_shift": "Cambio",
+  "controls_keyboard_fast_pan": "Panorámica rápida (5x)",
+  "controls_keyboard_zoom_in_out": "Acercar/alejar",
+  "controls_keyboard_key_home": "Hogar",
+  "controls_keyboard_jump_to_present": "Saltar al presente",
+  "controls_keyboard_reset_zoom": "Restablecer zoom",
+  "controls_keyboard_invert_arrows": "Invertir teclas de flecha",
+  "controls_touch": "Tocar",
+  "controls_touch_drag": "Arrastrar",
+  "controls_touch_drag_pan": "Cacerola",
+  "controls_touch_pinch": "Pellizco",
+  "controls_touch_pinch_zoom": "Acercar/alejar",
+  "controls_touch_zoom_sensitivity": "Sensibilidad al pellizco",
+  "controls_touch_enable_pinch_zoom": "Habilitar pellizcar para hacer zoom"
 }
