--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "De inlogfunctionaliteit is nog niet geïmplementeerd.",
   "account_password_reset_not_implemented": "De functionaliteit voor het resetten van wachtwoorden is nog niet geïmplementeerd.",
   "account_forgot_password": "Wachtwoord vergeten?",
-  "settings_parameters": "Parameters",
-  "system": "systeem",
   "settings_time": "Tijd",
-  "settings_timeviews": "Tijdsbeelden",
-  "settings_timeline": "Tijdlijn",
-  "settings_timeline_size": "Maat",
-  "settings_categories": "Categorieën",
-  "settings_categories_all": "Alle",
-  "settings_region": "Regio",
-  "settings_region_system": "systeem",
-  "settings_region_custom": "aangepast",
-  "region_date": "Datum",
-  "region_numbers": "Getallen",
-  "region_years": "Jaren",
-  "region_week_starts": "De week begint",
-  "date_order": "Datumvolgorde",
-  "date_order_dmy": "Dag/Maand/Jaar (DMY)",
-  "date_order_mdy": "Maand/Dag/Jaar (MDY)",
-  "date_order_ymd": "Jaar/Maand/Dag (JMD)",
-  "number_format": "Getalnotatie",
-  "year_suffixes": "Jaarachtervoegsels",
-  "year_suffixes_bmk": "B/M/K (Engels)",
-  "year_suffixes_gama": "Ga/Ma (Wetenschappelijk)",
-  "year_suffixes_mrd": "Mrd/Mio/T (Duits)",
-  "week_starts": "De week begint op",
-  "monday": "Maandag",
-  "sunday": "Zondag",
-  "mouse": "Muis",
-  "mouse_drag": "Sleuren",
-  "mouse_wheel": "Wiel",
-  "pan_timeline": "Pan-tijdlijn",
-  "zoom_at_cursor": "Zoom in op de cursor",
-  "pan_sensitivity": "Pan-gevoeligheid",
-  "enable_inertia": "Momentum na het slepen",
-  "touch": "Aanraken",
-  "drag_touch": "Sleuren",
-  "pan": "Pan",
-  "pinch_touch": "Kneep",
-  "zoom_in_out": "In-/uitzoomen",
-  "zoom_sensitivity": "Knijpgevoeligheid",
-  "enable_pinch_zoom": "knijp om in te zoomen",
-  "keyboard": "Toetsenbord",
-  "pan_left_right": "Pan naar links/rechts",
-  "fast_pan": "Snel pannen (5x)",
-  "jump_to_present": "Spring naar het heden",
-  "reset_zoom": "Zoom opnieuw instellen",
-  "invert_arrow_keys": "Keer de pijltjestoetsen om"
+  "time_timeviews": "Tijdsbeelden",
+  "time_timeline": "Tijdlijn",
+  "time_timeline_size": "Maat",
+  "time_categories": "Categorieën",
+  "time_categories_all": "Alle",
+  "time_region": "Regio",
+  "time_region_system": "systeem",
+  "time_region_custom": "aangepast",
+  "time_region_date_order": "Datumvolgorde",
+  "time_region_date_order_dmy": "Dag-Maand-Jaar",
+  "time_region_date_order_mdy": "Maand-Dag-Jaar",
+  "time_region_date_order_ymd": "Jaar-Maand-Dag",
+  "time_region_number_format": "Getalnotatie",
+  "time_region_year_suffixes": "Jaarachtervoegsels",
+  "time_region_year_suffixes_bmk": "B/M/K",
+  "time_region_year_suffixes_gama": "Ga/Ma",
+  "time_region_year_suffixes_mrd": "Mrd/Mio/T",
+  "time_region_week_starts": "De week begint",
+  "time_region_week_starts_monday": "Maandag",
+  "time_region_week_starts_sunday": "Zondag",
+  "settings_parameters": "Parameters",
+  "controls_mouse": "Muis",
+  "controls_mouse_drag": "Sleuren",
+  "controls_mouse_drag_pan": "Pan-tijdlijn",
+  "controls_mouse_wheel": "Wiel",
+  "controls_mouse_wheel_zoom_at_cursor": "Zoom in op de cursor",
+  "controls_mouse_pan_sensitivity": "Pan-gevoeligheid",
+  "controls_mouse_enable_inertia": "Momentum na het slepen",
+  "controls_keyboard": "Toetsenbord",
+  "controls_keyboard_pan_left_right": "Pan naar links/rechts",
+  "controls_keyboard_key_shift": "Verschuiving",
+  "controls_keyboard_fast_pan": "Snel pannen (5x)",
+  "controls_keyboard_zoom_in_out": "In-/uitzoomen",
+  "controls_keyboard_key_home": "Thuis",
+  "controls_keyboard_jump_to_present": "Spring naar het heden",
+  "controls_keyboard_reset_zoom": "Zoom opnieuw instellen",
+  "controls_keyboard_invert_arrows": "Keer de pijltjestoetsen om",
+  "controls_touch": "Aanraken",
+  "controls_touch_drag": "Sleuren",
+  "controls_touch_drag_pan": "Pan",
+  "controls_touch_pinch": "Kneep",
+  "controls_touch_pinch_zoom": "In-/uitzoomen",
+  "controls_touch_zoom_sensitivity": "Knijpgevoeligheid",
+  "controls_touch_enable_pinch_zoom": "Schakel knijpzoomen in."
 }
