--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -318,51 +318,49 @@
   "account_login_not_implemented": "Функція входу ще не реалізована",
   "account_password_reset_not_implemented": "Функція скидання пароля ще не реалізована",
   "account_forgot_password": "Забули пароль?",
-  "settings_parameters": "Параметри",
-  "system": "система",
   "settings_time": "Час",
-  "settings_timeviews": "Часові перегляди",
-  "settings_timeline": "Хронологія",
-  "settings_timeline_size": "Розмір",
-  "settings_categories": "Категорії",
-  "settings_categories_all": "Усі",
-  "settings_region": "Регіон",
-  "settings_region_system": "система",
-  "settings_region_custom": "звичай",
-  "region_date": "Дата",
-  "region_numbers": "Числа",
-  "region_years": "Роки",
-  "region_week_starts": "Початок тижня",
-  "date_order": "Порядок дат",
-  "date_order_dmy": "День/Місяць/Рік (ДМГ)",
-  "date_order_mdy": "Місяць/День/Рік (MDY)",
-  "date_order_ymd": "Рік/Місяць/День (YMD)",
-  "number_format": "Числовий формат",
-  "year_suffixes": "Суфікси року",
-  "year_suffixes_bmk": "Б/М/К (англійська)",
-  "year_suffixes_gama": "Га/Ма (науковий)",
-  "year_suffixes_mrd": "Mrd/Mio/T (німецька)",
-  "week_starts": "Тиждень починається",
-  "monday": "Понеділок",
-  "sunday": "Неділя",
-  "mouse": "Миша",
-  "mouse_drag": "Перетягування",
-  "mouse_wheel": "Колесо",
-  "pan_timeline": "Панорамування часової шкали",
-  "zoom_at_cursor": "Масштабування курсора",
-  "pan_sensitivity": "Чутливість панорамування",
-  "enable_inertia": "Імпульс після опору",
-  "touch": "Дотик",
-  "drag_touch": "Перетягування",
-  "pan": "Пательня",
-  "pinch_touch": "Щіпка",
-  "zoom_in_out": "Збільшення/зменшення масштабу",
-  "zoom_sensitivity": "Чутливість до щипка",
-  "enable_pinch_zoom": "Збільшення за допомогою щіпки",
-  "keyboard": "Клавіатура",
-  "pan_left_right": "Панорамування вліво/вправо",
-  "fast_pan": "Швидке панорамування (5x)",
-  "jump_to_present": "Перейти до презентації",
-  "reset_zoom": "Скинути масштаб",
-  "invert_arrow_keys": "Інвертувати клавіші зі стрілками"
+  "time_timeviews": "Часові перегляди",
+  "time_timeline": "Хронологія",
+  "time_timeline_size": "Розмір",
+  "time_categories": "Категорії",
+  "time_categories_all": "Усі",
+  "time_region": "Регіон",
+  "time_region_system": "система",
+  "time_region_custom": "звичай",
+  "time_region_date_order": "Порядок дат",
+  "time_region_date_order_dmy": "День-Місяць-Рік",
+  "time_region_date_order_mdy": "Місяць-День-Рік",
+  "time_region_date_order_ymd": "Рік-Місяць-День",
+  "time_region_number_format": "Числовий формат",
+  "time_region_year_suffixes": "Суфікси року",
+  "time_region_year_suffixes_bmk": "Б/М/К",
+  "time_region_year_suffixes_gama": "Га/Ма",
+  "time_region_year_suffixes_mrd": "Мрд/Міо/Т",
+  "time_region_week_starts": "Початок тижня",
+  "time_region_week_starts_monday": "Понеділок",
+  "time_region_week_starts_sunday": "Неділя",
+  "settings_parameters": "Параметри",
+  "controls_mouse": "Миша",
+  "controls_mouse_drag": "Перетягування",
+  "controls_mouse_drag_pan": "Панорамування часової шкали",
+  "controls_mouse_wheel": "Колесо",
+  "controls_mouse_wheel_zoom_at_cursor": "Масштабування курсора",
+  "controls_mouse_pan_sensitivity": "Чутливість панорамування",
+  "controls_mouse_enable_inertia": "Імпульс після опору",
+  "controls_keyboard": "Клавіатура",
+  "controls_keyboard_pan_left_right": "Панорамування вліво/вправо",
+  "controls_keyboard_key_shift": "Зсув",
+  "controls_keyboard_fast_pan": "Швидке панорамування (5x)",
+  "controls_keyboard_zoom_in_out": "Збільшення/зменшення масштабу",
+  "controls_keyboard_key_home": "Дім",
+  "controls_keyboard_jump_to_present": "Перейти до презентації",
+  "controls_keyboard_reset_zoom": "Скинути масштаб",
+  "controls_keyboard_invert_arrows": "Інвертувати клавіші зі стрілками",
+  "controls_touch": "Дотик",
+  "controls_touch_drag": "Перетягування",
+  "controls_touch_drag_pan": "Пательня",
+  "controls_touch_pinch": "Щіпка",
+  "controls_touch_pinch_zoom": "Збільшення/зменшення масштабу",
+  "controls_touch_zoom_sensitivity": "Чутливість до щипка",
+  "controls_touch_enable_pinch_zoom": "Увімкнути масштабування щіпками"
 }
